@@ -12,6 +12,7 @@
 #include <cassert>
 #include <fstream>
 // Boost includes
+#include "boost/shared_ptr.hpp"
 #include "boost/lexical_cast.hpp"
 #include "boost/algorithm/string.hpp"
 #include "boost/foreach.hpp"
